--- a/index.html
+++ b/index.html
@@ -1,13 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
     <title>Work2Home</title>
 </head>
+
 <body>
-    
+    <div class="container">
+        <header>
+            <div class="header__top">
+                <div class="header__top_left">
+                    <a href="#"><i class="header__icon fa fa-phone" aria-hidden="true"> 099 445 896</i></a>
+                    <a href="#"><i class="header__icon fa fa-facebook-square" aria-hidden="true"></i></a>
+                    <a href="#"><i class="header__icon fa fa-instagram" aria-hidden="true"></i></a>
+                </div>
+                <div class="header__top_right">
+                    <a href="#"><i class="header__icon fa fa-shopping-basket" aria-hidden="true"> No Products.</i></a>
+                </div>
+            </div>
+            <div class="header__down">
+                <div class="header__down_left">
+                    <img class="header__down_logo_icon" src="img/logo_icon.png" alt="apple">
+                    <h2 class="header__down_logo">Apple Market</h2>
+                </div>
+                <div class="header__down_right">
+                    <nav>
+                        <ul class="header__down_menu">
+                            <li><a class="header__down_link" href="#">Main</a></li>
+                            <li><a class="header__down_link" href="#">Market</a></li>
+                            <li><a class="header__down_link" href="#">Contacts</a></li>
+                            <li><a class="header__down_link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </header>
+    </div>
 </body>
+
 </html>
