--- a/index.html
+++ b/index.html
@@ -31,16 +31,30 @@
                 <div class="header__down_right">
                     <nav>
                         <ul class="header__down_menu">
-                            <li><a class="header__down_link" href="#">Main</a></li>
+                            <li><a class="header__down_link" href="#">Home</a></li>
                             <li><a class="header__down_link" href="#">Market</a></li>
                             <li><a class="header__down_link" href="#">Contacts</a></li>
-                            <li><a class="header__down_link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
+                            <li><a class="header__down_link" href="#"><i class="fa fa-search"
+                                        aria-hidden="true"></i></a>
                             </li>
                         </ul>
                     </nav>
                 </div>
             </div>
         </header>
+    </div>
+    <div class="market_title">
+        <h1 class="market_title_h1">Market</h1>
+    </div>
+    <div class="main">
+        <main>
+            <div class="main__content">
+
+            </div>
+            <div class="main__sidebar">
+
+            </div>
+        </main>
     </div>
 </body>
 
